--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <!-- Canonical and Robots -->
-  <link rel="canonical" href="https://sites.google.com/view/staticquasar931/gm3z/the-impossible-quiz">
+  <link rel="canonical" href="https://staticquasar931.github.io/The-Impossible-Quiz/">
   <meta name="robots" content="index, follow, max-image-preview:large">
 
   <!-- Title -->
@@ -31,7 +31,7 @@
   <meta property="og:title" content="The Impossible Quiz - Unblocked by StaticQuasar931">
   <meta property="og:description" content="Think different. The classic flash puzzle with trick questions. Free, fullscreen, and school safe.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://sites.google.com/view/staticquasar931/gm3z/the-impossible-quiz">
+  <meta property="og:url" content="https://staticquasar931.github.io/The-Impossible-Quiz/">
   <meta property="og:image" content="https://res.cloudinary.com/dlq5fztla/image/upload/v1761090959/flash_365143_card_a5fbku.png">
   <meta property="og:image:alt" content="The Impossible Quiz thumbnail from StaticQuasar931">
   <meta name="twitter:card" content="summary_large_image">
